--- a/html/index.html
+++ b/html/index.html
@@ -97,7 +97,7 @@
                     </span>
                     <br>
                     <span class="wrapper">
-                        <span data-ts-delay=".05s">Widea LLC.™</span>
+                        <span data-ts-delay=".05s">Widea™ LLC.</span>
                     </span>
                 </h1>
 
@@ -147,11 +147,11 @@
 
                     <div class="row no-gutters ts-gallery">
 
-                        <div class="col-md-6 col-lg-4">
+                        <div class="col-md-6 col-lg-3">
                             <a href="assets/img/img__work__thumb--01.jpg" class="card ts-gallery__item ts-floated-description popup-image" data-animate="ts-fadeInUp">
                                 <div class="ts-gallery__item-description">
-                                    <h5>Software interconnected, smart and customized</h5>
-                                    <h3>API</h3>
+                                    <h5>Integrate your existing platform systems as single source of truth</h5>
+                                    <h3>API integrations</h3>
                                 </div>
                                 <div class="ts-background ts-img-into-bg">
                                     <img src="assets/img/img__work__thumb--01.jpg" alt="">
@@ -160,11 +160,11 @@
                         </div>
                         <!--end gallery item-->
 
-                        <div class="col-md-6 col-lg-4">
+                        <div class="col-md-6 col-lg-3">
                             <a href="assets/img/img__work__thumb--02.jpg" class="card ts-gallery__item ts-floated-description popup-image" data-animate="ts-fadeInUp" data-delay=".1s">
                                 <div class="ts-gallery__item-description">
                                     <h5>Save human time automating real business processes</h5>
-                                    <h3>Automation</h3>
+                                    <h3>AI Automation</h3>
                                 </div>
                                 <div class="ts-background ts-img-into-bg">
                                     <img src="assets/img/img__work__thumb--02.jpg" alt="">
@@ -173,11 +173,11 @@
                         </div>
                         <!--end gallery item-->
 
-                        <div class="col-md-6 col-lg-4">
+                        <div class="col-md-6 col-lg-3">
                             <a href="assets/img/img__work__thumb--03.jpg" class="card ts-gallery__item ts-floated-description popup-image" data-animate="ts-fadeInUp" data-delay=".15s">
                                 <div class="ts-gallery__item-description">
-                                    <h5>Know them: First meet & entire life cycle</h5>
-                                    <h3>Your Customer</h3>
+                                    <h5>Development and DNS managment</h5>
+                                    <h3>Web</h3>
                                 </div>
                                 <div class="ts-background ts-img-into-bg">
                                     <img src="assets/img/img__work__thumb--03.jpg" alt="">
@@ -186,44 +186,21 @@
                         </div>
                         <!--end gallery item-->
 
-                        <div class="col-md-6 col-lg-4">
-                            <a href="assets/img/img__work__thumb--04.jpg" class="card ts-gallery__item ts-floated-description popup-image" data-animate="ts-fadeInUp" data-delay=".2s">
+                        <div class="col-md-6 col-lg-3">
+                            <a href="assets/img/img__work__thumb--03.jpg" class="card ts-gallery__item ts-floated-description popup-image" data-animate="ts-fadeInUp" data-delay=".15s">
                                 <div class="ts-gallery__item-description">
-                                    <h5>Java Object-oriented programming (OOP), C, HTML, CSS, Javascript, Google App Script, php, SQL database, Arduino, Pascal, Assembly</h5>
-                                    <h3>+ Programming</h3>
+                                    <h5>CRM needs</h5>
+                                    <h3>Salesforce Development</h3>
                                 </div>
                                 <div class="ts-background ts-img-into-bg">
-                                    <img src="assets/img/img__work__thumb--04.jpg" alt="">
+                                    <img src="assets/img/img__work__thumb--03.jpg" alt="">
                                 </div>
                             </a>
                         </div>
                         <!--end gallery item-->
 
-                        <div class="col-md-6 col-lg-4">
-                            <a href="assets/img/img__work__thumb--05.jpg" class="card ts-gallery__item ts-floated-description popup-image" data-animate="ts-fadeInUp" data-delay=".25s">
-                                <div class="ts-gallery__item-description">
-                                    <h5>Apex + LWC. custom coded visual components</h5>
-                                    <h3>Salesforce & CRM</h3>
-                                </div>
-                                <div class="ts-background ts-img-into-bg">
-                                    <img src="assets/img/img__work__thumb--05.jpg" alt="">
-                                </div>
-                            </a>
-                        </div>
-                        <!--end gallery item-->
+                   
 
-                        <div class="col-md-6 col-lg-4">
-                            <a href="assets/img/img__work__thumb--06.jpg" class="card ts-gallery__item ts-floated-description popup-image" data-animate="ts-fadeInUp" data-delay=".3s">
-                                <div class="ts-gallery__item-description">
-                                    <h5>Cleanly designed experience: User happy is prioritized</h5>
-                                    <h3>UX Design</h3>
-                                </div>
-                                <div class="ts-background ts-img-into-bg">
-                                    <img src="assets/img/img__work__thumb--06.jpg" alt="">
-                                </div>
-                            </a>
-                        </div>
-                        <!--end gallery item-->
 
                     </div>
                 </div>
@@ -273,26 +250,6 @@
                 </div>
             </section>
 
-            <!--Partners
-            ============================================================================================================
-            -->
-            <section id="partners" class="py-5" data-bg-color="#fafafa">
-                <div class="container py-5">
-                    <div class="d-block d-md-flex justify-content-around align-items-center text-center ts-partners">
-
-                        <a href="#">
-                            <img src="assets/img/logo-01.png" alt="">
-                        </a>
-                        <a href="#">
-                            <img src="assets/img/logo-02.png" alt="">
-                        </a>
-                        <a href="#">
-                            <img src="assets/img/logo-03.png" alt="">
-                        </a>
-
-                    </div>
-                </div>
-            </section>
 
             <!--Skills
             ============================================================================================================
@@ -612,7 +569,8 @@
                 <div class="container">
 
                     <div class="ts-title">
-                        <h2>hello@wide.ar</h2>
+                        <h2>hello@widea.group</h2>
+                        <h3>+1 (408) 403-9494</h3>
                     </div>
 
                     <div class="row">
@@ -626,7 +584,7 @@
 
                         <div class="col-sm-6 col-md-4">
                             <address class="ts-text-muted---white">
-                                Widea LLC.™
+                                Widea™ LLC.
                                 <br>
                                 <strong>US </strong>legitimate company
                                 <br>
