--- a/html/about__default.html
+++ b/html/about__default.html
@@ -48,161 +48,26 @@
                 ========================================================================================================
                 -->
                 <li class="nav-item">
-                    <a class="nav-link" href="#collapse__home" data-toggle="collapse" role="button">Home</a>
+                    <a class="nav-link active" href="#collapse__home" data-toggle="collapse" role="button">Widea</a>
                     <div class="collapse" id="collapse__home">
                         <ul class="nav flex-column">
-
+<!--Inicio, Servicios, Nosotros, Contacto, etc-->
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Creative</a>
+                                <a class="nav-link" href="index.html">Home</a>
                             </li>
+                           
                             <li class="nav-item">
-                                <a class="nav-link" href="index__app.html">App</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="index__freelancer.html">Freelancer</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="index__portfolio.html">Portfolio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="index__slider.html">Slider</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="index__video.html">Video</a>
+                                <a class="nav-link" href="about__default.html">About Us</a>
                             </li>
 
-                        </ul>
-                    </div>
-                </li>
-
-                <!--About us
-                ========================================================================================================
-                -->
-                <li class="nav-item">
-                    <a class="nav-link active" href="#collapse__about" data-toggle="collapse" role="button">About</a>
-                    <div class="collapse" id="collapse__about">
-                        <ul class="nav flex-column">
-
                             <li class="nav-item">
-                                <a class="nav-link" href="about__default.html">Default</a>
+                                <a class="nav-link" href="index__app.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="about__freelancer.html">Freelancer</a>
+                                <a class="nav-link" href="contact__default.html">Contact</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="about__minimal.html">Minimal</a>
-                            </li>
+        
 
-                        </ul>
-                    </div>
-                </li>
-
-                <!--Portfolio
-                ========================================================================================================
-                -->
-                <li class="nav-item">
-                    <a class="nav-link" href="#collapse-portfolio" data-toggle="collapse" role="button">Portfolio</a>
-                    <div class="collapse" id="collapse-portfolio">
-                        <ul class="nav flex-column">
-
-                            <!--Single-->
-
-                            <li class="nav-item">
-                                <a class="nav-link" href="#collapse__portfolio--detail" data-toggle="collapse" role="button">Detail</a>
-                                <div class="collapse" id="collapse__portfolio--detail">
-                                    <ul class="nav flex-column">
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="portfolio__detail--default.html">Default</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="portfolio__detail--slider.html">Slider</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="portfolio__detail--minimal.html">Minimal</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="portfolio__detail--case-study.html">Case Study</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="portfolio__detail--vertical.html">Vertical</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-
-                            <!--Columns-->
-
-                            <li class="nav-item">
-                                <a class="nav-link" href="#collapse__portfolio--columns" data-toggle="collapse" role="button">Columns</a>
-                                <div class="collapse" id="collapse__portfolio--columns">
-                                    <ul class="nav flex-column">
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="portfolio__columns--2.html">2 Columns</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="portfolio__columns--3.html">3 Columns</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="portfolio__columns--4.html">4 Columns</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="portfolio__columns--2--full-width.html">Full Width 2 Columns</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="portfolio__columns--3--full-width.html">Full Width 3 Columns</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="portfolio__columns--4--full-width.html">Full Width 4 Columns</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-
-                            <!--Masonry-->
-
-                            <li class="nav-item">
-                                <a class="nav-link" href="portfolio__masonry.html">Masonry</a>
-                            </li>
-
-                        </ul>
-                    </div>
-                </li>
-
-                <!--Blog
-                ========================================================================================================
-                -->
-                <li class="nav-item">
-                    <a class="nav-link" href="#collapse__blog" data-toggle="collapse" role="button">Blog</a>
-                    <div class="collapse" id="collapse__blog">
-                        <ul class="nav flex-column">
-
-                            <li class="nav-item">
-                                <a class="nav-link active" href="blog__list.html">Listing</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="blog__detail.html">Post Detail</a>
-                            </li>
-
-                        </ul>
-                    </div>
-                </li>
-
-                <!--Contact
-                ========================================================================================================
-                -->
-                <li class="nav-item">
-                    <a class="nav-link" href="#collapse__contact" data-toggle="collapse" role="button">Contact</a>
-                    <div class="collapse" id="collapse__contact">
-                        <ul class="nav flex-column">
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact__default.html">Default</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact__left-map.html">Left Map</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact__minimal.html">Minimal</a>
-                            </li>
                         </ul>
                     </div>
                 </li>
@@ -262,8 +127,8 @@
                                                 <img src="assets/img/img__person--01.jpg" alt="">
                                             </div>
                                         </div>
-                                        <h5>Gloria Derouen</h5>
-                                        <h6>Company CEO</h6>
+                                        <h5>Martin Cardarilli</h5>
+                                        <h6>CEO</h6>
                                         <div class="ts-social">
                                             <a href="#" class="ts-underline ts-link clearfix">Facebook</a>
                                             <a href="#" class="ts-underline ts-link ">Twitter</a>
@@ -279,8 +144,8 @@
                                                 <img src="assets/img/img__person--02.jpg" alt="">
                                             </div>
                                         </div>
-                                        <h5>Thomas Quintana</h5>
-                                        <h6>Head Designer</h6>
+                                        <h5>Luciano Massari</h5>
+                                        <h6>Project Manager</h6>
                                         <div class="ts-social">
                                             <a href="#" class="ts-underline ts-link clearfix">Facebook</a>
                                             <a href="#" class="ts-underline ts-link ">Twitter</a>
@@ -296,8 +161,8 @@
                                                 <img src="assets/img/img__person--03.jpg" alt="">
                                             </div>
                                         </div>
-                                        <h5>Connie Braden</h5>
-                                        <h6>Developer</h6>
+                                        <h5>Agustin Lohse</h5>
+                                        <h6>Software Developer</h6>
                                         <div class="ts-social">
                                             <a href="#" class="ts-underline ts-link clearfix">Facebook</a>
                                             <a href="#" class="ts-underline ts-link ">Twitter</a>
@@ -313,8 +178,8 @@
                                                 <img src="assets/img/img__person--04.jpg" alt="">
                                             </div>
                                         </div>
-                                        <h5>Cleveland Gray</h5>
-                                        <h6>Support</h6>
+                                        <h5>Federico Tartari</h5>
+                                        <h6>Sales Manager</h6>
                                         <div class="ts-social">
                                             <a href="#" class="ts-underline ts-link clearfix">Facebook</a>
                                             <a href="#" class="ts-underline ts-link ">Twitter</a>
@@ -349,19 +214,12 @@
                         </div>
 
                         <div class="col-md-8">
+                            <p>With over eight years of fulfilling global demands for innovative solutions, now operating as a legitimate U.S. company, we are a robust team of developers with years of experience.</p>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nunc vitae nibh
-                                congue pellentesque. Mauris scelerisque quam semper feugiat tincidunt. Pellentesque a
-                                ullamcorper erat, id dapibus velit. Aliquam erat volutpat. Proin at sapien leo. Nullam
-                                fermentum purus ac massa dignissim, in cursus turpis lobortis. Aliquam lacinia ante a
-                                velit viverra scelerisque. Suspendisse nec dui sed tortor mollis rutrum nec at leo.
+                                Our company offers a broad spectrum of IT services, specializing in automation, programming, and design to deliver cutting-edge solutions. We also provide comprehensive enterprise solutions from concept to implementation.
                             </p>
                             <p>
-                                Cras consequat diam diam, ac vehicula ipsum maximus id. Cras maximus mi id dolor suscipit
-                                suscipit. Donec a mi eget dolor elementum egestas. Nullam eu augue ornare, suscipit diam
-                                ut, feugiat purus. Curabitur ultrices magna vitae massa porta vulputate. Cras dignissim
-                                justo tincidunt tellus tempus, quis iaculis sem facilisis. Duis efficitur felis eu eros
-                                convallis facilisis. Pellentesque semper velit vitae purus tincidunt lacinia.
+                                We serve a diverse clientele, ranging from startups to established corporations, tailoring our services to meet their unique needs and enhance their business operations.
                             </p>
                             <div class="ts-group h5">
                                 <a href="#" class="px-1">
