--- a/html/contact__default.html
+++ b/html/contact__default.html
@@ -105,9 +105,9 @@
                                             <h2>We’re Here</h2>
                                         </div>
                                         <address>
-                                            1565 Broadcast Drive
+                                            8 The Green STE B,
                                             <br>
-                                            Dulles, VA 20166
+                                            Dover, DE 19901
                                             <br>
                                             <br>
                                             <strong>Tel:</strong> +1 (408) 403 9494
@@ -125,23 +125,18 @@
                                         </div>
                                         <ul class="list-unstyled">
                                             <li>
-                                                <a href="#">
-                                                    <i class="fab fa-facebook-square mr-2"></i>
-                                                    Facebook
+                                                <a href="https://wa.me/14084039494">
+                                                    <i class="fab fa-whatsapp-square mr-2"></i>
+                                                    WhatsApp
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#">
+                                                <a href="https://www.linkedin.com/company/widea-llc">
                                                     <i class="fab fa-twitter-square mr-2"></i>
-                                                    Twitter
+                                                    LinkedIn
                                                 </a>
                                             </li>
-                                            <li>
-                                                <a href="#">
-                                                    <i class="fab fa-youtube-square mr-2"></i>
-                                                    Youtube
-                                                </a>
-                                            </li>
+                                          
                                         </ul>
                                     </section>
                                 </div>
